--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="asssets/aos-next/src/sass/_animations.scss">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="shortcut icon" href="img/3483794198b80fc3746a76760cde6966.jpg" type="image/x-icon">
   </head>
 
   <body>
